--- a/src/Pages/MoviesFolder/movieAdd/movie-add/movie-add.component.html
+++ b/src/Pages/MoviesFolder/movieAdd/movie-add/movie-add.component.html
@@ -37,32 +37,27 @@
     <div class="m-3">
         <fieldset>
             <div formArrayName="casting">
-                @for (control of getCasting().controls; let i = $index; track control) {
-
-                    <label for="actor">Actor</label>
-                    <br>
-                    <select name="casting" id="casting" [formControlName]="i" >
-                        <option *ngFor="let actor of actorList" [value]="actor.firstname + ' ' + actor.lastname">
-                            {{actor.firstname}} {{actor.lastname}}
-                        </option>
-                    </select>
-
-                    <!-- Ajout de la vérification des erreurs de validations -->
-                    @if (control?.errors) {
-                        @if (control.errors?.['required'] && control.touched) {
-                            <span class="p-error error-font">*This field is required</span>
-                        } @else if (control.errors?.['minlength']) {
-                            <span class="p-error error-font">*This field requires at least 3 characters</span>
-                        } @else if (control.errors?.['maxlength']) {
-                            <span class="p-error error-font">*This field accepts 20 characters maximum</span>
-                        }
-                        }
-                        <!-- Ajout d'un conditionnel d'affichage de bouton de suppression d'input si l'index != 0 -->
-                    @if (i !== 0) {
-                        <button (click)="removeCasting(i)" class="btn btn-primary m-3" >Remove this Actor</button>
-                    }
-                }
-            </div>
+                <div *ngFor="let control of getCasting().controls; let i = index" [formGroupName]="i">
+                  <label for="actor">Actor</label>
+                  <br>
+                  <select formControlName="actor">
+                    <option *ngFor="let actor of actorList" [ngValue]="actor">
+                      {{actor.firstname}} {{actor.lastname}}
+                    </option>
+                  </select>
+            
+                  <label for="role">Role</label>
+                  <input type="text" formControlName="role">
+            
+                  <!-- Validation errors -->
+                  <div *ngIf="control.errors && control.touched">
+                    <span *ngIf="control.errors['required']">*This field is required</span>
+                  </div>
+            
+                  <!-- Remove button for casting, hidden for the first element -->
+                  <button *ngIf="i !== 0" type="button" (click)="removeCasting(i)" class="btn btn-primary m-3">Remove this Actor</button>
+                </div>
+              </div>
         </fieldset>
             <button (click)="addCasting()" class="btn btn-primary m-3" >Add more Actor</button>
     </div>
