--- a/src/Pages/PersonFolder/people/people.component.html
+++ b/src/Pages/PersonFolder/people/people.component.html
@@ -14,7 +14,7 @@
                 <p>{{person.firstname}}</p>
                 <p>{{person.lastname}}</p>
                 <p>{{person.role}}</p>
-                <a class="btn btn-primary w-16" routerLink="/personDetails/{{person.id}}">Details</a>
+                <a class="btn btn-primary w-auto" routerLink="/personDetails/{{person.id}}">Details</a>
             </div>
             <div class="m-3">
                 <img src="{{person.pictureURL}}" alt="image de la personne" width="150">
