--- a/src/Pages/MoviesFolder/movies/movies.component.html
+++ b/src/Pages/MoviesFolder/movies/movies.component.html
@@ -3,14 +3,13 @@
     <a class="btn btn-primary w-1/3 mt-2 mb-8  m-auto" routerLink="/movieAdd">Add Movie</a>
 </div>
 
-<div class="w-2/3 m-auto bg-white/[.8] p-4 text-center rounded">
+<div class="card w-2/3 m-auto bg-white/[.8] p-4 text-center">
     <div *ngFor="let movie of moviesList">
         
         <div class="card m-auto w-2/3 mt-8 mb-8 m-auto bg-black/[.8] grid grid-cols-2">
-            <div class="m-auto">
+            <div class="m-auto m-4">
 
                 <h4>{{movie.title}}</h4>
-                <p>{{movie.realisatorId}}</p>
             </div>
             <div class="m-auto">
                 <a class="btn btn-primary w-16" routerLink="/movieDetails/{{movie.id}}">Details</a>
