--- a/src/Pages/homepage/homepage.component.html
+++ b/src/Pages/homepage/homepage.component.html
@@ -1,13 +1,62 @@
-<h1 class="m-auto w-50 text-center text-xl">Welcome</h1>
+<h1 class="m-auto w-50 text-center text-2xl m-4">Welcome</h1>
+<h1 class="m-auto w-50 text-center text-2xl m-4">To</h1>
+<h1 class="m-auto w-50 text-center text-2xl m-4">Movies</h1>
 
-<div class="card shadow bg-black/[.4] border border-white w-2/3 m-auto mt-16">
 
-    <div class="reduce">
-        <app-movies></app-movies>
+<div class="card w-2/12 border border-white/[.4] m-auto mt-16 justify-center bg-black shadow">
+  <div class="carousel rounded-box w-auto border border-white/[.4] transition m-6">
+
+    <div *ngFor="let person of people" class="carousel-item w-full carousel-inner">
+      <img
+        src="{{person.pictureURL}}"
+        class="w-44 p-4 m-auto"
+        alt="{{person.lastname}}{{person.firstname}}" />
     </div>
     
-    <div class="reduce">
-        <app-people></app-people>
-    </div>
-
+  </div>
 </div>
+
+@if (this.isLogged() == "true") {
+
+  <div class="card shadow bg-black/[.4] border border-white w-2/3 m-auto mt-16">
+    <div>
+      
+      <div class="w-1/3 m-auto text-center">
+        <label for="value">Search Movies By Actor</label>
+        <br>
+        <select name="value" id="value" [(ngModel)]="selectedValue" (change)="search(selectedValue)">
+          <option *ngFor="let actor of people" [value]="actor.id">
+            {{actor.firstname}} {{actor.lastname}}
+          </option>
+        </select>
+      </div>
+      
+      <div class="overflow-x-auto">
+        <table class="table">
+          <thead>
+            <tr>
+              <th>ID</th>
+              <th>Title</th>
+              <th>Description</th>
+              <th>Details</th>
+            </tr>
+          </thead>
+          <tbody>
+
+            <tr *ngFor="let movie of movieList">
+              <th>{{movie.id}}</th>
+              <td>{{movie.title}}</td>
+              <td>{{movie.description}}</td>
+              
+              <td>
+                <a class="btn btn-primary" routerLink="/movieDetails/{{movie.id}}">Details</a>
+              </td>
+            </tr>
+            
+          </tbody>
+        </table>
+      </div>
+    </div>
+    
+  </div>
+}
