--- a/src/Pages/MoviesFolder/movies/movies.component.html
+++ b/src/Pages/MoviesFolder/movies/movies.component.html
@@ -1,13 +1,13 @@
-<div class="w-1/3 card bg-black/[.4] m-auto mt-8 mb-8 text-center">
-    <h1 class="m-8">Movies</h1>
+<div class="w-3/12 card  m-auto mt-8 mb-8 text-center">
+    <h1 class="mt-8 mb-4 p-2 w-6/12 m-auto card  text-4xl">Movies</h1>
     <a class="btn btn-primary w-1/3 mt-2 mb-8  m-auto" routerLink="/movieAdd">Add Movie</a>
 </div>
 
-<div class="card w-2/3 m-auto bg-white/[.8] p-4 text-center">
+<div class="card w-9/12 m-auto bg-white/[.8] p-4 text-center">
     <div *ngFor="let movie of moviesList">
         
-        <div class="card m-auto w-2/3 mt-8 mb-8 m-auto bg-black/[.8] grid grid-cols-2">
-            <div class="m-auto m-4">
+        <div class="card m-auto w-2/3 mt-8 mb-8 m-auto p-4 bg-black/[.8] grid grid-cols-2">
+            <div class="card m-auto m-4 p-4 bg-white/[.1] ">
 
                 <h4>{{movie.title}}</h4>
             </div>
@@ -17,5 +17,5 @@
         </div>
 
     </div>
-
 </div>
+
