--- a/src/Pages/homepage/homepage.component.html
+++ b/src/Pages/homepage/homepage.component.html
@@ -1,6 +1,6 @@
-<h1 class="m-auto w-50 text-center text-2xl m-4">Welcome</h1>
-<h1 class="m-auto w-50 text-center text-2xl m-4">To</h1>
+<h1 class="m-auto w-50 text-center text-l m-4">Movies</h1>
 <h1 class="m-auto w-50 text-center text-2xl m-4">Movies</h1>
+<h1 class="m-auto w-50 text-center text-4xl m-4">Movies</h1>
 
 
 <div class="card w-2/12 border border-white/[.4] m-auto mt-16 justify-center bg-black shadow">
@@ -18,7 +18,7 @@
 
 @if (this.isLogged() == "true") {
 
-  <div class="card shadow bg-black/[.4] border border-white w-2/3 m-auto mt-16">
+  <div class="card shadow bg-black/[.4] border border-white w-2/3 m-auto mt-16 mb-16">
     <div>
       
       <div class="w-1/3 m-auto text-center">
@@ -35,7 +35,6 @@
         <table class="table">
           <thead>
             <tr>
-              <th>ID</th>
               <th>Title</th>
               <th>Description</th>
               <th>Details</th>
@@ -44,7 +43,6 @@
           <tbody>
 
             <tr *ngFor="let movie of movieList">
-              <th>{{movie.id}}</th>
               <td>{{movie.title}}</td>
               <td>{{movie.description}}</td>
               
